# mldevops_exercise

./: .gitignore  .pre-commit-config.yaml  Lab1.ipynb  pyproject.toml
