[tool.poetry]
name = "mldevops-excercise"
version = "0.1.0"
description = ""
authors = ["janbrodowicz <brodowiczjan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
